Epic gamer time

--- a/gbdashboard/html/templates/dashboardTemplate.html
+++ b/gbdashboard/html/templates/dashboardTemplate.html
@@ -23,7 +23,7 @@
     </style>
 
     <meta charset="UTF-8">
-    <title>DashboardName</title>
+    <title>SmarterDashboard</title>
 </head>
 <body>
 
@@ -34,7 +34,7 @@
 </p>
 <p style="text-align: center; font-size: 22px; line-height: 2px">
 
-    Description - the quick brown fox jumped over the lazy dog
+    Description - the quick brown fox jumps over the lazy dog
 
 </p>
 
